ws-slo/apps/mautrix/whatsapp/overlays/nishir/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whatsapp
spec:
  gatewayClassName: whatsapp
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-whatsapp
            group: ""
            kind: Secret
